<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Store</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_store_menu">StoreMenu</string>
    <string name="lbluser">Enter to user</string>
    <string name="txtuser"></string>
    <string name="lblpassword">Enter to password</string>
    <string name="txtpassword"></string>
    <string name="btnenter">Enter</string>
    <string name="title_activity_lanza_menu">LanzaMenu</string>
    <string name="title_activity_element">Element</string>
    <string name="title_activity_carrito">Carrito</string>
    <string name="btnvolverpro">Volver a Productos</string>
    <string name="btnverlis">Ver productos seleccionados</string>
    <string name="title_activity_detalle__producto">Detalle_Producto</string>
    <string name="lbldetaprod" />

</resources>
